# lecture-cmake

./: .gitignore  README.md
advanced/: CMakeLists.txt  main.c
cmd/: CMakeLists.txt  intf.c  main.cpp
cmd/src/: CMakeLists.txt
example1/: CMakeLists.txt
example1/src/: CMakeLists.txt
example1/src/executable/: CMakeLists.txt  main.c
example1/src/shared/: CMakeLists.txt  rslock.c  rslock.h
example1/src/static/: CMakeLists.txt  compare.c  compare.h
example2/: CMakeLists.txt  main.c  toolchain_mipsel.cmake
helloworld/: .CMakeLists.txt  CMakeLists.txt
helloworld/_cmake_/: .CMakeLists.txt  main.c
helloworld/gcc/: test
helloworld/makefile/: Makefile
