CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


MACRO(MLOG content)
	MESSAGE(STATUS ${content})
	MESSAGE(STATUS "MACRO MLOG")
ENDMACRO(MLOG)

FUNCTION(FLOG content)
	MESSAGE(STATUS ${content})
	MESSAGE(STATUS "FUNCTION FLOG")
ENDFUNCTION(FLOG)


MLOG("CMAKE advanced")
FLOG("CMAKE advanced")

ADD_EXECUTABLE(advance main.c)



