SET(SRC main.c)
SET(TARGEG demo)
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY} 
	${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
INCLUDE_DIRECTORIES(AFTER ${PROJECT_BINARY_DIR}/inc)
MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(${TARGEG} ${SRC})
TARGET_LINK_LIBRARIES(${TARGEG} rscmp)
TARGET_LINK_LIBRARIES(${TARGEG} rslock)
