SET(TARGET rscmp)
SET(SRC compare.c)




ADD_LIBRARY(${TARGET} STATIC ${SRC})

ADD_CUSTOM_COMMAND(TARGET ${TARGET}
	POST_BUILD
	#COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/compare.h tmp
	#COMMAND echo `pwd`
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/compare.h ${PROJECT_BINARY_DIR}/inc/compare.h)

